Add lists and paragraphs for lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,26 @@
 </head>
 <body>
 <h1>lasagna</h1>
+<h2>Description</h2>
+<p>
+    This dish is like a skyscraper that fits in your oven, 
+    and most importantly, your mouth. This construction has 
+    the potential to satisfy your appetite, pacify your cat, 
+    and obliterate your wellbeing.
+</p>
+<ul>
+    <li>Lasagna leafs</li>
+    <li>To. Ma. Toes.</li>
+    <li>Cheese</li>
+    <li>Moar cheese!</li>
+</ul>
+<ol>
+    <li>Make the tomatoes into mush</li>
+    <li>Pour a bit of the tomato sauce in a bowl</li>
+    <li>Put lasagna leafs on top of them</li>
+    <li>Repeat a couple a times</li>
+    <li>Build the roof out of cheese, make it thick</li>
+</ol>
 <a href="../index.html">Home</a>
 </body>
 </html>
