add headings for lists

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,12 +13,14 @@
     the potential to satisfy your appetite, pacify your cat, 
     and obliterate your wellbeing.
 </p>
+<h2>Ingredients</h2>
 <ul>
     <li>Lasagna leafs</li>
     <li>To. Ma. Toes.</li>
     <li>Cheese</li>
     <li>Moar cheese!</li>
 </ul>
+<h2>Steps</h2>
 <ol>
     <li>Make the tomatoes into mush</li>
     <li>Pour a bit of the tomato sauce in a bowl</li>
