--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">lasagna</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">lasagna</a></li>
+            <li><a href="recipes/fries.html">fries</a></li>
+            <li><a href="recipes/langos.html">langos</a></li>  
+        </ul>
         
     </body>
 </html>
