--- a/recipes/langos.html
+++ b/recipes/langos.html
@@ -30,5 +30,6 @@
             <li>Pour out thine cauldron in holy drops over Balatoil</li>
             <li>Harvest, Feast, Ascend!</li>
         </ol>
+        <a href="../index.html">Home</a>
     </body>
 </html>
