--- a/recipes/fries.html
+++ b/recipes/fries.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>fries</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Fries</h1>
