--- a/recipes/langos.html
+++ b/recipes/langos.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>langos</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Langos</h1>
