add title-styles for all pages

--- a/recipes/fries.html
+++ b/recipes/fries.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Fries</h1>
+        <h1 class="title1">Fries</h1>
         <h2>Description</h2>
         <p>Also called 'yellow gold', these nutritious sticks
              of pure fat, salt, and beautiful potato will make you
