--- a/recipes/langos.html
+++ b/recipes/langos.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Langos</h1>
+        <h1 class="title1">Langos</h1>
         <h2>Description</h2>
         <p>This is it. Welcome, to that which you have always craved, 
             but never known. Plato once said,
