--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../style.css"
 </head>
 <body>
-<h1>lasagna</h1>
+<h1 class="title1">lasagna</h1>
 <h2>Description</h2>
 <p>
     This dish is like a skyscraper that fits in your oven, 
