--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="title">Odin Recipes</h1>
         <ul>
             <li><a href="recipes/lasagna.html">lasagna</a></li>
             <li><a href="recipes/fries.html">fries</a></li>
