add classes, change make-up

--- a/recipes/fries.html
+++ b/recipes/fries.html
@@ -26,6 +26,6 @@
             <li>Let that shizzle sizzle</li>
         </ol>
 
-        <a href="../index.html">Home</a>
+        <a class="back" href="../index.html">Home</a>
     </body>
 </html>
