--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -29,6 +29,6 @@
     <li>Repeat a couple a times</li>
     <li>Build the roof out of cheese, make it thick</li>
 </ol>
-<a href="../index.html">Home</a>
+<a class="back" href="../index.html">Home</a>
 </body>
 </html>
