--- a/recipes/langos.html
+++ b/recipes/langos.html
@@ -31,6 +31,6 @@
             <li>Pour out thine cauldron in holy drops over Balatoil</li>
             <li>Harvest, Feast, Ascend!</li>
         </ol>
-        <a href="../index.html">Home</a>
+        <a class="back" href="../index.html">Home</a>
     </body>
 </html>
